# stonks

./: Cargo.toml
src/: main.rs
