[package]
name = "stonks"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo@noronha.eti.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
structopt = "0.3"
rustyline = "6.2.0"
rust_decimal = "1.7.0"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["sync"]